# OS_lab1

./: README.md
lab-5-7/: CMakeLists.txt  calculation.cpp  control.cpp  myzmq.hpp  search.hpp  topology.hpp
lab1/doc/: task.txt
lab1/src/: child.cpp  main.cpp
lab2/doc/: data.csv
lab2/src/: main.cpp  vis.py
lab3/doc/: report.docx
lab3/src/: child.cpp  main.cpp  test.txt
lab4/: CMakeLists.txt  dyn.cpp  stat.cpp
lab4/doc/: report.odt
lab4/include/: realization.hpp
lab4/src/: realization_1.cpp  realization_2.cpp
lab8/: report.odt
